# termux-gfx-wrapper

./: .gitignore  10_android_wrapper.json  CMakeLists.txt  README.md  push.sh
src/common/: android.cpp  android.hpp  format.cpp  format.hpp  hardwarebuffer.hpp
src/egl/: android-display.cpp  dispatch.cpp  egl.cpp  egl.hpp  gles.cpp  surface.cpp  surface.hpp  x11-display.cpp
src/vulkan/: vulkan.cpp  vulkan.hpp
wayland/: hwbuf-client.h  hwbuf-server.h  hwbuf.c  hwbuf.xml
